--- a/produktseite.html
+++ b/produktseite.html
@@ -305,7 +305,7 @@ body {
                     </button></div>
                 </div>
                 <div class="atc_contain">
-                  <div class="atc-quantity_contain">
+                  <div class="atc-quantity_contain" style="display: none">
                     <div class="selector-pill is-quantity"><svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 24 24" width="41" height="41" fill="currentColor" app="ikonik" class="star-icon">
                         <g app="ikonik">
                           <g data-name="minus" app="ikonik">
