--- a/colibri-memories-handgefertigte-3d-pop-up-karte---suche.html
+++ b/colibri-memories-handgefertigte-3d-pop-up-karte---suche.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Oct 06 2025 14:47:52 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Fri Oct 17 2025 17:11:18 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="68e2b18b082fc16853999acc" data-wf-site="68e2b18b082fc16853999ad2" lang="en">
 <head>
   <meta charset="utf-8">
@@ -221,6 +221,12 @@ body {
                 <div class="menu-content_wrap">
                   <a href="produktseite.html" class="link-block w-inline-block">
                     <div>Colibri Memories - Handgefertigte 3D Pop-Up Karte</div>
+                  </a>
+                  <a href="handgefertigte-3d-pop-up-karte-fur-besondere-anlasse-purple.html" class="link-block w-inline-block">
+                    <div>Lila Karte</div>
+                  </a>
+                  <a href="handgefertigte-3d-pop-up-karte-fur-besondere-anlasse-blau.html" class="link-block w-inline-block">
+                    <div>Grüne Karte</div>
                   </a>
                   <a href="hilfe-kontakt.html" class="link-block-2 w-inline-block">
                     <div>Hilfe&amp;Kontakt</div>
@@ -528,6 +534,12 @@ body {
                 <a href="produktseite.html" class="w-inline-block">
                   <h3>3D Colibri Memories Handgefertigte Geschenkkarte für besondere Anlässe </h3>
                 </a>
+                <a href="handgefertigte-3d-pop-up-karte-fur-besondere-anlasse-purple.html" class="w-inline-block">
+                  <h3>3D Colibri Memories Handgefertigte Geschenkkarte für besondere Anlässe - Lila Farbe </h3>
+                </a>
+                <a href="handgefertigte-3d-pop-up-karte-fur-besondere-anlasse-blau.html" class="w-inline-block">
+                  <h3>3D Colibri Memories Handgefertigte Geschenkkarte für besondere Anlässe - Grüne Farbe </h3>
+                </a>
               </div>
               <div class="hamburger-close-btn_wrap">
                 <a href="hilfe-kontakt.html" class="w-inline-block">
@@ -542,86 +554,6 @@ body {
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=68e2b18b082fc16853999ad2" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/fgs-creative-styleguide-7-109e6b1f2c17d.js" type="text/javascript"></script>
-  <script>
-// Product configuration with Stripe Payment Links
-const products = {
-    '1': { 
-        name: '1 Stück Kolibri-Karte', 
-        price: 7.95, 
-        paymentLink: 'https://buy.stripe.com/28E4gzdXs9Mn1ZOgwQ6Zy05' 
-    },
-    '3': { 
-        name: '3 Stück Kolibri-Karten', 
-        price: 19.95, 
-        paymentLink: 'https://buy.stripe.com/aFafZh6v0bUvdIwcgA6Zy06' 
-    },
-    '5': { 
-        name: '5 Stück Kolibri-Karten', 
-        price: 32.95, 
-        paymentLink: 'https://buy.stripe.com/aFa4gz9HcbUv1ZO80k6Zy07' 
-    },
-    '10': { 
-        name: '10 Stück Kolibri-Karten', 
-        price: 65.95, 
-        paymentLink: 'https://buy.stripe.com/eVqcN58D83nZ9sga8s6Zy08' 
-    }
-};
-// Track selected bundle variant
-let selectedBundle = null;
-// Update price display
-function updatePriceDisplay() {
-    const priceElement = document.querySelector('[price-display]');
-    if (priceElement && selectedBundle) {
-        const product = products[selectedBundle];
-        priceElement.textContent = `€${product.price.toFixed(2).replace('.', ',')}`;
-    }
-}
-// Proceed to checkout with Payment Links
-function proceedToCheckout() {
-    if (!selectedBundle) {
-        alert('Bitte wählen Sie eine Menge aus (1, 3, 5 oder 10 Stück)');
-        return;
-    }
-    const product = products[selectedBundle];
-    window.location.href = product.paymentLink;
-}
-// Update bundle button styles
-function updateBundleButtons() {
-    const quantityButtons = document.querySelectorAll('[data-quantity]');
-    quantityButtons.forEach(button => {
-        const quantity = button.getAttribute('data-quantity');
-        if (quantity === selectedBundle) {
-            // Selected state - blue background, white text
-            button.style.backgroundColor = '#3d4a6e';
-            button.style.color = '#ffffff';
-            button.style.borderColor = '#3d4a6e';
-        } else {
-            // Default state - reset to original
-            button.style.backgroundColor = '';
-            button.style.color = '';
-            button.style.borderColor = '';
-        }
-    });
-}
-// Add click listeners
-document.addEventListener('DOMContentLoaded', function() {
-    // Bundle variant selection buttons
-    const quantityButtons = document.querySelectorAll('[data-quantity]');
-    quantityButtons.forEach(button => {
-        button.addEventListener('click', function() {
-            const quantity = this.getAttribute('data-quantity');
-            selectedBundle = quantity;
-            updateBundleButtons();
-            updatePriceDisplay();
-        });
-    });
-    // Main checkout button
-    const checkoutButtons = document.querySelectorAll('[data-checkout]');
-    checkoutButtons.forEach(btn => {
-        btn.addEventListener('click', proceedToCheckout);
-    });
-});
-</script>
   <script type="application/ld+json">
 {
   "@context": "https://schema.org",
