--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Oct 06 2025 14:47:52 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Fri Oct 17 2025 17:11:18 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="68e2b18b082fc16853999ac2" data-wf-site="68e2b18b082fc16853999ad2" lang="en">
 <head>
   <meta charset="utf-8">
@@ -223,6 +223,12 @@ body {
                   <a href="produktseite.html" class="link-block w-inline-block">
                     <div>Colibri Memories - Handgefertigte 3D Pop-Up Karte</div>
                   </a>
+                  <a href="handgefertigte-3d-pop-up-karte-fur-besondere-anlasse-purple.html" class="link-block w-inline-block">
+                    <div>Lila Karte</div>
+                  </a>
+                  <a href="handgefertigte-3d-pop-up-karte-fur-besondere-anlasse-blau.html" class="link-block w-inline-block">
+                    <div>Grüne Karte</div>
+                  </a>
                   <a href="hilfe-kontakt.html" class="link-block-2 w-inline-block">
                     <div>Hilfe&amp;Kontakt</div>
                   </a>
@@ -357,8 +363,8 @@ window.lazyLoadOptions = {
           <div class="global-padding">
             <div class="warum_wrap">
               <div class="w-layout-grid warum_grid">
-                <div class="warum-grid-content_contain"><img src="images/DSCF0646_-_Copy.webp" loading="lazy" sizes="(max-width: 2500px) 100vw, 2500px" srcset="images/DSCF0646_-_Copy-p-500.webp 500w, images/DSCF0646_-_Copy-p-800.webp 800w, images/DSCF0646_-_Copy-p-1080.webp 1080w, images/DSCF0646_-_Copy-p-1600.webp 1600w, images/DSCF0646_-_Copy-p-2000.webp 2000w, images/DSCF0646_-_Copy.webp 2500w" alt="" class="warum-grid-img"></div>
-                <div class="warum-grid-content_contain"><img src="images/DSCF0642_-_Copy.webp" loading="lazy" sizes="(max-width: 2500px) 100vw, 2500px" srcset="images/DSCF0642_-_Copy-p-500.webp 500w, images/DSCF0642_-_Copy-p-800.webp 800w, images/DSCF0642_-_Copy-p-1080.webp 1080w, images/DSCF0642_-_Copy-p-1600.webp 1600w, images/DSCF0642_-_Copy-p-2000.webp 2000w, images/DSCF0642_-_Copy.webp 2500w" alt="" class="warum-grid-img"></div>
+                <div class="warum-grid-content_contain"><img src="images/DSCF0646_-_Copy.webp" loading="lazy" alt="" sizes="(max-width: 991px) 100vw, 960px" srcset="images/DSCF0646_-_Copy-p-500.webp 500w, images/DSCF0646_-_Copy-p-800.webp 800w, images/DSCF0646_-_Copy-p-1080.webp 1080w, images/DSCF0646_-_Copy-p-1600.webp 1600w, images/DSCF0646_-_Copy-p-2000.webp 2000w, images/DSCF0646_-_Copy.webp 2500w" class="warum-grid-img"></div>
+                <div class="warum-grid-content_contain"><img src="images/DSCF0642_-_Copy.webp" loading="lazy" alt="" sizes="(max-width: 1024px) 100vw, 1024px" srcset="images/DSCF0642_-_Copy-p-500.webp 500w, images/DSCF0642_-_Copy-p-800.webp 800w, images/DSCF0642_-_Copy-p-1080.webp 1080w, images/DSCF0642_-_Copy-p-1600.webp 1600w, images/DSCF0642_-_Copy-p-2000.webp 2000w, images/DSCF0642_-_Copy.webp 2500w" class="warum-grid-img"></div>
                 <div id="w-node-b95532a0-b0c9-6dd2-3dea-af8750c739a4-50c7399b" class="warum-grid-content_contain mini-padd">
                   <h3>Warum der Kolibri?</h3>
                   <p>Der Kolibri steht in vielen Kulturen für <strong>Lebensfreude, Leichtigkeit und die Fähigkeit</strong>, selbst im Sturm an Ort und Stelle zu schweben – die perfekte Metapher für besondere Momente, die wir festhalten möchten.<br><br>Mit seinen leuchtenden Farben und der einzigartigen Fähigkeit, rückwärts zu fliegen, symbolisiert er auch die Verbindung zwischen <strong>Vergangenheit und Gegenwart</strong> – genau wie unsere Erinnerungen.</p>
@@ -444,9 +450,9 @@ window.lazyLoadOptions = {
         <div class="_3images_contain global-padding-s">
           <div class="_3images_wrap">
             <div class="w-layout-grid _3images_grid _3images">
-              <div><img src="images/DSCF0654_-_Copy.webp" loading="lazy" sizes="(max-width: 2000px) 100vw, 2000px" srcset="images/DSCF0654_-_Copy-p-500.webp 500w, images/DSCF0654_-_Copy-p-800.webp 800w, images/DSCF0654_-_Copy-p-1080.webp 1080w, images/DSCF0654_-_Copy-p-1600.webp 1600w, images/DSCF0654_-_Copy.webp 2000w" alt="" class="_3images-img"></div>
-              <div><img src="images/S1162230b365e4b408b8ab8aaea2ee560S.webp" loading="lazy" sizes="(max-width: 999px) 100vw, 999px" srcset="images/S1162230b365e4b408b8ab8aaea2ee560S-p-500.webp 500w, images/S1162230b365e4b408b8ab8aaea2ee560S-p-800.webp 800w, images/S1162230b365e4b408b8ab8aaea2ee560S.webp 999w" alt="" class="_3images-img"></div>
-              <div><img src="images/DSCF0654_-_Copy.webp" loading="lazy" sizes="(max-width: 2000px) 100vw, 2000px" srcset="images/DSCF0654_-_Copy-p-500.webp 500w, images/DSCF0654_-_Copy-p-800.webp 800w, images/DSCF0654_-_Copy-p-1080.webp 1080w, images/DSCF0654_-_Copy-p-1600.webp 1600w, images/DSCF0654_-_Copy.webp 2000w" alt="" class="_3images-img"></div>
+              <div><img src="images/DSCF0654_-_Copy.webp" loading="lazy" alt="" sizes="(max-width: 1279px) 100vw, 1024px" srcset="images/DSCF0654_-_Copy-p-500.webp 500w, images/DSCF0654_-_Copy-p-800.webp 800w, images/DSCF0654_-_Copy-p-1080.webp 1080w, images/DSCF0654_-_Copy-p-1600.webp 1600w, images/DSCF0654_-_Copy.webp 2000w" class="_3images-img"></div>
+              <div><img src="images/S1162230b365e4b408b8ab8aaea2ee560S.webp" loading="lazy" alt="" sizes="(max-width: 991px) 100vw, 960px" srcset="images/S1162230b365e4b408b8ab8aaea2ee560S-p-500.webp 500w, images/S1162230b365e4b408b8ab8aaea2ee560S-p-800.webp 800w, images/S1162230b365e4b408b8ab8aaea2ee560S.webp 999w" class="_3images-img"></div>
+              <div><img src="images/DSCF0654_-_Copy.webp" loading="lazy" alt="" sizes="(max-width: 1377px) 100vw, 1377px" srcset="images/DSCF0654_-_Copy-p-500.webp 500w, images/DSCF0654_-_Copy-p-800.webp 800w, images/DSCF0654_-_Copy-p-1080.webp 1080w, images/DSCF0654_-_Copy-p-1600.webp 1600w, images/DSCF0654_-_Copy.webp 2000w" class="_3images-img"></div>
             </div>
             <div class="max-width-600px">
               <a data-checkout="true" data-wf--button--variant="base" href="produktseite.html" class="button w-inline-block">
@@ -465,7 +471,7 @@ window.lazyLoadOptions = {
               </div>
               <div class="profile-img-content_wrap">
                 <h3>Felipe Sayao</h3>
-                <p>Ich bin Felipe, Creative Designer und Gründer von felipesayao.studio und fgscreative.com. Meine Leidenschaft für einzigartige Ästhetik und Form hat mich zur Erschaffung dieser besonderen 3D-Geschenkkarten inspiriert.<br><br>Für mich ist Ästhetik die Sprache der Emotionen – und genau diese Verbindung möchte ich mit jedem Stück vermitteln. Die Kolibri-Karten sind nicht nur ein Nebenprojekt, das mir Freude bereitet, sondern eine Möglichkeit, kleine Kunstwerke zu schaffen, die besondere Momente im Leben begleiten.</p>
+                <p>Ich bin Felipe, Creative Designer und Gründer von <a href="https://www.felipesayao.studio/" target="_blank" class="text-underline">felipesayao.studio</a> und <a href="https://www.fgscreative.com/" target="_blank" class="text-underline">fgscreative.com</a>. Meine Leidenschaft für einzigartige Ästhetik und Form hat mich zur Erschaffung dieser besonderen 3D-Geschenkkarten inspiriert.<br><br>Für mich ist Ästhetik die Sprache der Emotionen – und genau diese Verbindung möchte ich mit jedem Stück vermitteln. Die Kolibri-Karten sind nicht nur ein Nebenprojekt, das mir Freude bereitet, sondern eine Möglichkeit, kleine Kunstwerke zu schaffen, die besondere Momente im Leben begleiten.</p>
               </div>
             </div>
           </div>
@@ -713,6 +719,12 @@ window.lazyLoadOptions = {
                 <a href="produktseite.html" class="w-inline-block">
                   <h3>3D Colibri Memories Handgefertigte Geschenkkarte für besondere Anlässe </h3>
                 </a>
+                <a href="handgefertigte-3d-pop-up-karte-fur-besondere-anlasse-purple.html" class="w-inline-block">
+                  <h3>3D Colibri Memories Handgefertigte Geschenkkarte für besondere Anlässe - Lila Farbe </h3>
+                </a>
+                <a href="handgefertigte-3d-pop-up-karte-fur-besondere-anlasse-blau.html" class="w-inline-block">
+                  <h3>3D Colibri Memories Handgefertigte Geschenkkarte für besondere Anlässe - Grüne Farbe </h3>
+                </a>
               </div>
               <div class="hamburger-close-btn_wrap">
                 <a href="hilfe-kontakt.html" class="w-inline-block">
@@ -727,86 +739,6 @@ window.lazyLoadOptions = {
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=68e2b18b082fc16853999ad2" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/fgs-creative-styleguide-7-109e6b1f2c17d.js" type="text/javascript"></script>
-  <script>
-// Product configuration with Stripe Payment Links
-const products = {
-    '1': { 
-        name: '1 Stück Kolibri-Karte', 
-        price: 7.95, 
-        paymentLink: 'https://buy.stripe.com/28E4gzdXs9Mn1ZOgwQ6Zy05' 
-    },
-    '3': { 
-        name: '3 Stück Kolibri-Karten', 
-        price: 19.95, 
-        paymentLink: 'https://buy.stripe.com/aFafZh6v0bUvdIwcgA6Zy06' 
-    },
-    '5': { 
-        name: '5 Stück Kolibri-Karten', 
-        price: 32.95, 
-        paymentLink: 'https://buy.stripe.com/aFa4gz9HcbUv1ZO80k6Zy07' 
-    },
-    '10': { 
-        name: '10 Stück Kolibri-Karten', 
-        price: 65.95, 
-        paymentLink: 'https://buy.stripe.com/eVqcN58D83nZ9sga8s6Zy08' 
-    }
-};
-// Track selected bundle variant
-let selectedBundle = null;
-// Update price display
-function updatePriceDisplay() {
-    const priceElement = document.querySelector('[price-display]');
-    if (priceElement && selectedBundle) {
-        const product = products[selectedBundle];
-        priceElement.textContent = `€${product.price.toFixed(2).replace('.', ',')}`;
-    }
-}
-// Proceed to checkout with Payment Links
-function proceedToCheckout() {
-    if (!selectedBundle) {
-        alert('Bitte wählen Sie eine Menge aus (1, 3, 5 oder 10 Stück)');
-        return;
-    }
-    const product = products[selectedBundle];
-    window.location.href = product.paymentLink;
-}
-// Update bundle button styles
-function updateBundleButtons() {
-    const quantityButtons = document.querySelectorAll('[data-quantity]');
-    quantityButtons.forEach(button => {
-        const quantity = button.getAttribute('data-quantity');
-        if (quantity === selectedBundle) {
-            // Selected state - blue background, white text
-            button.style.backgroundColor = '#3d4a6e';
-            button.style.color = '#ffffff';
-            button.style.borderColor = '#3d4a6e';
-        } else {
-            // Default state - reset to original
-            button.style.backgroundColor = '';
-            button.style.color = '';
-            button.style.borderColor = '';
-        }
-    });
-}
-// Add click listeners
-document.addEventListener('DOMContentLoaded', function() {
-    // Bundle variant selection buttons
-    const quantityButtons = document.querySelectorAll('[data-quantity]');
-    quantityButtons.forEach(button => {
-        button.addEventListener('click', function() {
-            const quantity = this.getAttribute('data-quantity');
-            selectedBundle = quantity;
-            updateBundleButtons();
-            updatePriceDisplay();
-        });
-    });
-    // Main checkout button
-    const checkoutButtons = document.querySelectorAll('[data-checkout]');
-    checkoutButtons.forEach(btn => {
-        btn.addEventListener('click', proceedToCheckout);
-    });
-});
-</script>
   <script type="application/ld+json">
 {
   "@context": "https://schema.org",
@@ -876,20 +808,6 @@ document.addEventListener('DOMContentLoaded', function() {
     "ratingValue": "5.0",
     "reviewCount": "6"
   }
-}
-</script>
-  <script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "BreadcrumbList",
-  "itemListElement": [
-    {
-      "@type": "ListItem",
-      "position": 1,
-      "name": "Home",
-      "item": "https://www.colibrimemories.com"
-    }
-  ]
 }
 </script>
 </body>
